[package]
name = "rust-scanner"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "rust-scanner"
path = "src/main.rs"

[lib]
name = "libscanner"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xenet-packet-builder = "0.4.0"
